quick-protobuf/tests/rust_protobuf/v2/test_owned_must_compile_error.stderr
error[E0505]: cannot move out of `proto` because it is borrowed
  --> tests/rust_protobuf/v2/test_owned_must_compile_error.rs:18:10
   |
16 |     let owned_copy = proto.proto().s.to_owned();
   |                      ------------- borrow of `proto` occurs here
17 |
18 |     drop(proto);
   |          ^^^^^ move out of `proto` occurs here
19 |     println!("{:?}", owned_copy);
   |                      ---------- borrow later used here
